Fix #3248: use blue logo for Traditional theme (#3441)
* #3248 use blue logo for Traditional theme

* review tab space and blue logo name

* change file order and spaces

* Revert "review tab space and blue logo name"

This reverts commit 31e0c3d0e90d79ae0f292642a473943e0c45e354.

--- a/src/qt/dash.qrc
+++ b/src/qt/dash.qrc
@@ -71,6 +71,7 @@
         <file alias="checked">res/images/checked.png</file>
         <file alias="dash_logo_horizontal">res/images/dash_logo_horizontal.png</file>
         <file alias="dash_logo_toolbar">res/images/dash_logo_toolbar.png</file>
+        <file alias="dash_logo_toolbar_blue">res/images/dash_logo_toolbar_blue.png</file>
         <file alias="qtreeview_selected">res/images/qtreeview_selected.png</file>
         <file alias="splash">res/images/splash.png</file>
         <file alias="unchecked">res/images/unchecked.png</file>
